# halo2

./: Cargo.toml
.github/workflows/: bench.yml  book.yml  ci.yml  lints-beta.yml  lints-stable.yml
halo2_proofs/: .gdb_history  Cargo.toml  build.rs
halo2_proofs/src/: arithmetic.rs  lib.rs  plonk.rs  poly.rs  stackmachine.cu
halo2_proofs/src/plonk/: circuit.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs
halo2_proofs/src/plonk/lookup/: prover.rs
halo2_proofs/src/plonk/vanishing/: prover.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs
halo2_proofs/tests/: plonk_api.rs
